# api.yaml
@@ -36,12 +36,12 @@ paths:
                 location:
                   type: string
                   description: 经纬度
-  /house/price_predicted:
+  /house/rental_price_predicted:
     get:
-      summary: '返回房屋的预测价格,以及各个因素的影响'
+      summary: '返回房屋的预测租价,以及各个因素的影响'
       tags:
         - house
-      operationId: handlers.house.price_predicted
+      operationId: handlers.house.rental_price_predicted
       parameters:
         - name: address
           description: 房屋地址
@@ -56,27 +56,90 @@ paths:
           description: '房屋的面积,单位是平方米,例如:90'
           type: string
           in: query
-          pattern: '[\d\.]+'
+          pattern: '^[\d\.]+&'
         - name: rooms
           description: 房间数量
           in: query
-          pattern: '[0-9]'
+          pattern: '^[0-9]+&'
           type: string
         - name: living_rooms
           description: 客厅数量
           in: query
-          pattern: '[0-9]'
+          pattern: '^[0-9]+&'
+          type: string
+        - name: wcs
+          description: 房间数量
+          in: query
+          pattern: '^[0-9]+&'
           type: string
         - name: floor
           type: string
           description: 住在第几层
           in: query
-          pattern: '[0-9]*'
+          pattern: '^[0-9]+&'
         - name: total_floor
           type: string
           in: query
           description: 总共有几层
-          pattern: '[0-9]*'
+          pattern: '^[0-9]+&'
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              price_predicted:
+                type: string
+                description: 预测的价格
+              influence:
+                type: object
+                description: 各个因素对预测价格的影响
+  /house/selling_price_predicted:
+    get:
+      summary: '返回房屋的预测售价,以及各个因素的影响'
+      tags:
+        - house
+      operationId: handlers.house.selling_price_predicted
+      parameters:
+        - name: address
+          description: 房屋地址
+          in: query
+          type: string
+        - name: face
+          description: '房屋的朝向,输入数字,(北:0,东北:1,东:2,东南:3,南:4,西南:5,西:6,西北:7)'
+          type: string
+          pattern: '^[01234567]$'
+          in: query
+        - name: area
+          description: '房屋的面积,单位是平方米,例如:90'
+          type: string
+          in: query
+          pattern: '^[\d\.]+$'
+        - name: rooms
+          description: 房间数量
+          in: query
+          pattern: '^[0-9]+$'
+          type: string
+        - name: wcs
+          description: 厕所数量
+          pattern: '^[0-9]+$'
+          type: string
+          in: query
+        - name: living_rooms
+          description: 客厅数量
+          in: query
+          pattern: '^[0-9]+$'
+          type: string
+        - name: floor
+          type: string
+          description: 住在第几层
+          in: query
+          pattern: '^[0-9]+$'
+        - name: total_floor
+          type: string
+          in: query
+          description: 总共有几层
+          pattern: '^[0-9]+$'
       responses:
         '200':
           description: OK
@@ -155,12 +218,12 @@ paths:
           schema:
             type: string
             description: '两个坐标之间的距离,单位为米'
-  /house/average_price:
+  /house/average_rental_price:
     get:
       tags:
         - house
-      summary: '计算房子周围均价,如果周围房子价格少于一定数量,则返回错误'
-      operationId: handlers.house.average_price
+      summary: '计算房子周围平均租价,如果周围房子价格少于一定数量,则返回错误'
+      operationId: handlers.house.average_rental_price
       parameters:
         - name: location
           type: string
@@ -184,7 +247,42 @@ paths:
           description: OK
           schema:
             type: string
-            description: 房屋均价
+            description: 房屋平均租价
+        '401':
+          description: error 房屋数量少于no_less_than
+          schema:
+            type: string
+            description: 房屋数量少于no_less_than
+  /house/average_selling_price:
+    get:
+      tags:
+        - house
+      summary: '计算房子周围平均售价,如果周围房子价格少于一定数量,则返回错误'
+      operationId: handlers.house.average_selling_price
+      parameters:
+        - name: location
+          type: string
+          description: '房子的经纬度,例如"113.926795,22.521971"'
+          in: query
+          pattern: '^[\d\.]*,[\d\.]*$'
+        - name: radius
+          type: string
+          default: '500'
+          in: query
+          description: 周围多少米范围内
+          pattern: '^[\d\.]*$'
+        - name: no_less_than
+          type: string
+          description: '如果周围房子少于这个数量,则返回错误'
+          in: query
+          pattern: '^[0-9]*$'
+          default: '10'
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+            description: 房屋平均售价
         '401':
           description: error 房屋数量少于no_less_than
           schema:
